<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apogiatzis.udacitymovieproject.MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="104dp"
                    android:text="@string/movie_test_title"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:textSize="25sp"
                    android:textColor="@color/colorAlmostWhite"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_star"
                    android:id="@+id/iv_movie_details_favourite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="16dp"
                    android:onClick="onClickFavourites"/>

            </android.support.constraint.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_movie_details_poster"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_details_release_date"/>

                        <TextView
                            android:id="@+id/tv_movie_details_release_date"
                            android:textSize="23sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_details_rating"/>

                        <TextView
                            android:id="@+id/tv_movie_details_rating"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="19sp"
                    android:text="@string/movie_details_overview"/>

                <TextView
                    android:id="@+id/tv_movie_details_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"/>

                <!--Horizontal line-->
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"/>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/trailers_list"/>

                <!--Horizontal line-->
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"/>

                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/review_list"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
